compiler/test-data/parser/control/errors/select_missing_arrow.frel
module control.errors.select_missing_arrow

import test.common.*

blueprint Bad {
    x : i32 = 5

    select {
        x < 0 text { "negative" }
    }
}
